# raylib-template

./: CMakeLists.txt  README.md
sources/: Ball.c  Ball.h  CMakeLists.txt.bak  Game.c  Game.h  Makefile  gcc.txt  main.c
